<resources>
    <string name="app_name">MyAndroidTestPlat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="share">Share</string>
    <string name="list_button">List</string>
    <string name="grid_button">Grid</string>
    <string name="intent_picker">Intent Picker</string>
    <string name="menu_resource">Inflating a Menu</string>
    <string name="document">Document</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="folder">Folder</string>
    <string name="upload_photos">Upload photos or videos</string>
    <string name="use_camera">Use camera</string>
    <string name="share_some_text">Share some text!</string>
    <string name="image_picker">Image picker</string>
    <string name="show">Show</string>
    <string name="reopen">Reopen as other type</string>
    <string name="bottomsheet_fragment">BottomSheet Fragment</string>



    <string name="currency_symbol">\$</string>
    <string name="category_title">Category:</string>
    <string name="add_item_successful">You have successfully added an item!</string>
    <string name="ok">OK</string>

    <string name="laptops">Laptops</string>
    <string name="monitors">Monitors</string>
    <string name="headphones">Headphones</string>

    <string name="bundle_extra_item">ITEM</string>

    <string name="hint_title">Title</string>
    <string name="hint_price">Price</string>
    <string name="hint_details">Details</string>
    <string name="hint_add_item">Add Item</string>

    <string name="text_uploading">Uploading...</string>
    <string name="text_uploaded">Upload complete!</string>

    <string name="error_message_title">Please enter a valid Title</string>
    <string name="error_message_price">Please enter a minimum Price</string>

    <!--Shared Transition Elements-->
    <string name="transition_title">transition_title</string>
    <string name="transition_image">transition_image</string>
    <string name="transition_price">transition_price</string>
</resources>