<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:showIn="@layout/activity_details">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
      android:id="@+id/priceTextView"
      style="@style/TextAppearance.AppCompat.Headline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/teal_700"
      android:transitionName="@string/transition_price"
      tools:text="@string/hint_price" />

    <TextView
      android:id="@+id/titleTextView"
      style="@style/TextAppearance.AppCompat.Title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/default_margin"
      android:layout_marginTop="@dimen/default_margin"
      android:transitionName="@string/transition_title"
      tools:text="@string/hint_title" />

    <TextView
      android:id="@+id/detailsTextView"
      style="@style/TextAppearance.AppCompat.Body1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:text="@string/hint_details" />
  </LinearLayout>

</androidx.core.widget.NestedScrollView>